--- a/style.css
+++ b/style.css
@@ -125,7 +125,7 @@ ul {
 .icon {
     font-size: 40px;
     margin-right: 10px;
-    color: #2b45b9; /* Couleur des icônes, ajuste selon tes préférences */
+    color: #2b45b9; /* Couleur des icônes */
 }
 .icon:hover{
     color: #ad7ed9;
